Reduce [shimgen] log verbosity for consumers and clean up code/comments.
- Lower Using tool message to Low importance in buildTransitive targets to keep logs quiet.
- Remove unused using and tighten a comment in IntegrationTestUtil.
- Trim comments in IsolatedLoadContext to essential context.

No functional changes.

--- a/ShimGen/buildTransitive/Headsetsniper.Godot.FSharp.ShimGen.targets
+++ b/ShimGen/buildTransitive/Headsetsniper.Godot.FSharp.ShimGen.targets
@@ -45,7 +45,7 @@
   <!-- Run generator and include outputs in same compile -->
   <Target Name="RunShimGen" AfterTargets="ResolveReferences" BeforeTargets="CoreCompile;Compile" Condition=" '$(FSharpShimsEnabled)' != 'false' and '@(_FSharpRefs)' != '' and Exists('$(_ShimGenTool)') ">
     <MakeDir Directories="$(FSharpShimsOutDir)" Condition="!Exists('$(FSharpShimsOutDir)')" />
-    <Message Text="[shimgen] Using tool: $(_ShimGenTool)" Importance="High" />
+  <Message Text="[shimgen] Using tool: $(_ShimGenTool)" Importance="Low" />
     <Message Text="[shimgen] F# assemblies: @(_FSharpRefs)" Importance="Low" />
     <!-- Stage the tool in obj with any required runtime dependencies so 'dotnet' can resolve compile-time references -->
     <PropertyGroup>
